--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <distributionManagement>
         <repository>
             <id>danu6-mvn-repo</id>
-            <url>sftp://danu_os2@danu6.it.nuigalway.ie/14336256/mvn/</url>
+            <url>file:///C:/Users/Seán/Documents/SynchronisedDanuFolder/mvn</url>
         </repository>
     </distributionManagement>
     <build>
@@ -33,6 +33,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
+                <version>2.3</version>
             </extension>
         </extensions>
     </build>
