--- a/shippable.yml
+++ b/shippable.yml
@@ -3,6 +3,6 @@ language: java
 jdk:
   - oraclejdk8
 
-build:
-  ci:
-    - mvn test
+after_success:
+  - mvn clean cobertura:cobertura
+  - mvn test
